[gd_scene load_steps=8 format=3 uid="uid://bosmqyv0utabo"]

[ext_resource type="Theme" uid="uid://c7p7h5j8cckif" path="res://preparePhase/prep_theme.tres" id="1_prdod"]
[ext_resource type="Script" path="res://preparePhase/main_menu.gd" id="2_bbqsv"]
[ext_resource type="Theme" uid="uid://c38cnaco26erq" path="res://GUI/default_theme.tres" id="3_gc4t1"]
[ext_resource type="Script" path="res://preparePhase/settings.gd" id="3_j0hbn"]
[ext_resource type="AudioStream" uid="uid://kuu2ftwlhnk2" path="res://res/SFX/open_GUI.wav" id="4_1rel4"]
[ext_resource type="AudioStream" uid="uid://csooiooxhwkj0" path="res://res/SFX/close_GUI.wav" id="5_3syux"]
[ext_resource type="AudioStream" uid="uid://c16h1eu6d7ay2" path="res://res/SFX/button_pressed.wav" id="6_qpdy4"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_prdod")

[node name="Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_prdod")
script = ExtResource("2_bbqsv")

[node name="ColorRect" type="ColorRect" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.14902, 0.207843, 1)

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -257.0
offset_bottom = 89.0
grow_horizontal = 0
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40

[node name="eCoins" type="Label" parent="Menu/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.909804, 0.819608, 1)
theme_override_font_sizes/font_size = 35
text = "10 eCoins"
horizontal_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="Menu"]
layout_mode = 1
offset_right = 230.0
offset_bottom = 94.0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40

[node name="Settings" type="Button" parent="Menu/MarginContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.909804, 0.819608, 1)
theme_override_font_sizes/font_size = 35
text = "Einstellungen"
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.0
offset_top = -119.5
offset_right = 278.0
offset_bottom = 119.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Start" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_gc4t1")
theme_override_colors/font_color = Color(0.541176, 0.537255, 0.752941, 1)
theme_override_font_sizes/font_size = 40
text = "Neues Spiel starten"
flat = true

[node name="Shelf" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_gc4t1")
theme_override_colors/font_color = Color(0.976471, 0.341176, 0.219608, 1)
theme_override_font_sizes/font_size = 40
text = "Vorr√§te einkaufen"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="UpgradeCenter" type="Button" parent="Menu/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("3_gc4t1")
theme_override_colors/font_color = Color(0.239216, 0.839216, 0.815686, 1)
theme_override_font_sizes/font_size = 40
text = "Open Upgrade 
Center"
flat = true

[node name="Settings" type="CanvasLayer" parent="."]
visible = false

[node name="CenterContainer" type="CenterContainer" parent="Settings"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_prdod")
script = ExtResource("3_j0hbn")

[node name="MarginContainer" type="MarginContainer" parent="Settings/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 355

[node name="PanelContainer" type="PanelContainer" parent="Settings/CenterContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_prdod")

[node name="MarginContainer" type="MarginContainer" parent="Settings/CenterContainer/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 240

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/CenterContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.909804, 0.819608, 1)
theme_override_font_sizes/font_size = 60
text = "Einstellungen"

[node name="HSeparator" type="HSeparator" parent="Settings/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FontChange" type="CheckButton" parent="Settings/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
button_pressed = true
text = "Dyslexic Font"

[node name="Reset" type="Button" parent="Settings/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Reset Save"

[node name="SFX" type="Node" parent="."]

[node name="OpenGUISFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_1rel4")

[node name="CloseGUISFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_3syux")

[node name="ButtonSFX" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_qpdy4")

[connection signal="pressed" from="Menu/MarginContainer2/Settings" to="Menu" method="_on_settings_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Start" to="Menu" method="_on_start_round_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Shelf" to="Menu" method="_on_shelf_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/HBoxContainer/UpgradeCenter" to="Menu" method="_on_upgrade_center_pressed"]
[connection signal="pressed" from="Settings/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/FontChange" to="Settings/CenterContainer" method="_on_font_change_pressed"]
[connection signal="pressed" from="Settings/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Reset" to="Menu" method="_on_reset_pressed"]
